# cluvirt

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  build  cluvirt.spec.in  cluvirtd.init.in  cluvirtd.spec.in  configure.ac
client/: Makefile.am  cluvirtadm.c  interactive.c  interactive.h  member.c  member.h
cluvadm/: Makefile.am
cluvirtadm/: Makefile.am  group.c  main.c  member.c  member.h
cluvirtd/: Makefile.am  cluster.c  cluster.h  group.h  main.c  socket.c  socket.h  status.c  status.h
daemon/: Makefile.am  cluster.c  cluster.h  cluvirtd.c  domain.c  domain.h  group.c  group.h
lib/: Makefile.am  cluster.c  cluvirt.h  cluvirt.h.in  libcluvirt.c  status.c
libcluvirt/: Makefile.am  cluster.c  cluster.h  status.c  status.h  utils.h
man/: Makefile.am  cluvirtadm.8  cluvirtadm.x  cluvirtd.8  cluvirtd.x
src/: Makefile.am  cluster.c  cluvirt.h  cluvirtadm.c  cluvirtd.c  group.c  libcluvirt.c  member.c  member.h  status.c  status.h  utils.c
tests/: .gitignore  Makefile.am  check_clnode.c  check_domain.c  check_handle.c  chkutils.h
utils/: Makefile.am
